Fixed filter alignment
Fixed filter alignment

--- a/main.css
+++ b/main.css
@@ -23,20 +23,21 @@ header {
 .filters-bar {
     display: flex;
     justify-content: left;
-    gap: 20px;
+    align-items: center;
+    gap: 15px;
     font-weight: bold;
     margin: 10px 10px 20px 10px;
-    height: 34px;
+    height: 40px;
 }
 .filters-title {
     padding: 10px;
 }
-.fa-stack {
-    font-size: 16px;
-}
 .filters-name {
-    width: 75%;
-    padding: 7px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 0 15px 0 7px;
+    height: 40px;
 }
 .search {
     display: flex;
@@ -248,10 +249,13 @@ footer {
     color: #0065FC;
 }
 .filter {
-    border-style: solid;
-    border-color: #DEEBFF;
-    display: flex;
+    border-style: none;
+    box-shadow: 0 0 0px 1px #DEEBFF inset;
     border-radius: 20px;
+    height: 40px;
+    display: flex;
+    justify-content: left;
+    min-width: fit-content; 
 }
 .filter:hover {
     background-color: #0065FC;
@@ -274,9 +278,6 @@ footer {
 .fa-chart-line  {
     color: black;
 }
-.test {
-    position: relative;
-}
 .link-container {
     position: relative;
 }
@@ -295,4 +296,13 @@ footer {
     align-items: center;
     justify-content: center;
     border-radius: 100%;
+}
+.filter-icon {
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #DEEBFF;
 }
